# ares

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  MEMORY.md  README.md  RULES.md  SESSIONS.md  SOUL.md  config.yaml  install.sh
docker/: .env.example  Dockerfile.hermes  Dockerfile.tools  burp-proxy.py  burp-start.sh  compose.yml  config.yaml  hermes-entrypoint.sh  mobile-start.sh  setup.sh  swarmclaw-seed.js
docs/: 00-START-HERE.md  ARES-OVERVIEW.md  HERMES_PENTEST_ARCHITECTURE.md  HERMES_QUICK_REFERENCE.md  INDEX-LESSON-LEARNED.md  LESSON-LEARNED-BOLA-VALIDATION.md  Methodology-Lessons-From-False-Positive.md  SKILLS-AND-LESSONS-SUMMARY.md  VALIDATION-METHODOLOGY-CORE-PRINCIPLES.md  VALIDATION-QUICK-REFERENCE.md  VALIDATION_LESSON_LEARNED.md  VERIFICATION_LOOP_DEEP_DIVE.md
integration/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
integration/ares_integration/: __main__.py  adapter.py  docker_network.py  engage.py  hermes_trigger.py  kb.py  mobile.py  nats_consumer.py
integration/docker/: seccomp-ares.json
integration/tests/: conftest_ares.py  test_adapter.py  test_engage.py  test_kb.py  test_multitenant.py  test_nats_consumer.py
mcp/: adb.py  apk_sast.py  frida.py  frida_mcp.py  mobsf.py  requirements.txt
skills/cybersec/github-app-pr-security-review/: SKILL.md
skills/cybersec/pentest-attack-flow/: SKILL.md
skills/cybersec/pentest-attack-navigator/: SKILL.md
skills/pentest-orchestrate/: SKILL.md
skills/shared/: engagement-setup.md  mobile-verification.md  pentest-methodology.md  security-standards.md
(+62 files in other folders)
